<resources>
    <string name="app_name">Fruticas Mias</string>
    <string name="action_settings">Settings</string>
    <string name="AgregarVenta">Agregar Venta</string>
    <string name="nombre_producto">Nombre del Producto</string>
    <string name="precio">Precio:</string>
    <string name="descripcion">Descripcion:</string>
    <string name="productoAgregago">Producto Agregado Exitosamente</string>
    <string name="catalogoProducto">Catálogo de Productos</string>
    <string name="salir">Salir</string>
    <string name="reporte">Reportes</string>
    <string name="Bienvenido">Bienvenido Elige tu Opción</string>
    <string name="guardar">Guardar</string>
    <string name="limpiar">Limpiar</string>
    <string name="agregarVentas">Agregar Ventas</string>
    <string name="buscar_cliente">Buscar Cliente</string>
    <string name="ventas">Ventas</string>
    <string name="nombre">Nombre del Cliente</string>
    <string name="agregarCliente">Agregar Cliente</string>
    <string name="cliente">Cliente</string>
    <string name="cantidad">Cantidad</string>
    <string name="producto">Producto:</string>
    <string name="pUnitario">Precio Unitario</string>
    <string name="total">Total</string>
    <string name="seleccionarFoto">Seleccionar Foto</string>


    <string-array name="opcioneslistar">
        <item>@string/Agregar_producto</item>
        <item>@string/agregarCliente</item>
        <item>@string/agregarVentas</item>
        <item>@string/catalogoProducto</item>
        <item>@string/reporte</item>
        <item>@string/ventas</item>
        <item>@string/salir</item>
    </string-array>
    <string name="title_activity_inicio_sesion">Registrarse</string>

    <string-array name="reporte">
        <item>@string/reporte1</item>
        <item>@string/reporte2</item>
    </string-array>
    <string name="reporte1">Total de ventas Registradas </string>
    <string name="reporte2">Clientes con Mayor Compra </string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="apellido">Apellido del Cliente</string>
    <string name="telefono">Telefono</string>
    <string name="direccion">Dirección</string>
    <string name="detalle_producto">Detalle de producto</string>
    <string name="guardado_exitoso_cliente">Cliente Guardado Exitosamente</string>

    <string name="Enomb">Por Favor debe Ingresar un nombre</string>
    <string name="Eapelli">Por Favor debe ingresar un apellido</string>
    <string name="Etel">Por Favor debe Ingresar un telefono</string>
    <string name="Edirec">Por favor debe ingresar una direccion</string>
    <string name="erp">Por favor debe ingresar el nombre del producto</string>
    <string name="erd">Por favor debe ingresar la descripcion</string>
    <string name="erpre">Por favor debe ingresar un precio</string>
    <string name="mostrar">Mostrar</string>

    <string name="buscarProducto">Buscar Producto</string>
    <string name="buscar">Buscar</string>
    <string name="codigo">Código</string>
    <string name="infoProducto">Información del Producto</string>
    <string name="ventaGuardada">Venta Guardada Exitosamente.</string>
    <string name="Agregar_producto">Agregar Producto</string>
    <string name="cedula">Cédula</string>


</resources>
